--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
 		"stdlib.h": "c",
 		"stdio.h": "c",
 		"todo_backend.h": "c",
-		"unistd.h": "c"
+		"unistd.h": "c",
+		"todo_frontend.h": "c"
 	}
 
 }
